--- a/src/style.sass
+++ b/src/style.sass
@@ -32,12 +32,11 @@ body
 	overflow: hidden
 
 .flip-book
-	box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5)
 	display: none
 	background-size: cover
 
 .page
-	border: solid 1px gray
+	border: solid 1px black
 	overflow: hidden
 	.page-content
 		width: 100%
